--- a/index.html
+++ b/index.html
@@ -1,23 +1,40 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <link rel="stylesheet" href="style.css">
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto"> 
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Grocery List</title>
-</head>
-<body>
-<main>
-    <div class="card">
-        <div class="title">Grocery List</div>
-        <div class="form">
-            <input type="text" name="" id="" placeholder="e.g. eggs">
-            <input type="submit">
-        </div>
-    </div>
-</main>
+    <head>
+        <meta charset="UTF-8" />
+        <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+        <link rel="stylesheet" href="style.css" />
+        <link
+            rel="stylesheet"
+            href="https://fonts.googleapis.com/css?family=Roboto"
+        />
+        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+        <title>Grocery List</title>
+    </head>
+    <body>
+        <main>
+            <div class="card">
+                <span class="redMessage enter_value " >Please Enter A Value</span>
+                <span class="redMessage item_removed">Item Removed</span>
+                <span class="redMessage empty_list">Empty list</span>
+                <span class="GreenMessage item_added" >Item Added To The List</span>
+                <span class="GreenMessage value_changed">Value Changed</span>
 
-</body>
+                <div class="title">Grocery List</div>
+                <div class="form">
+                    <input type="text" name="" id="" placeholder="e.g. eggs" />
+                    <input
+                        type="submit"
+                        value="submit"
+                        class="submit show_submit"
+                    />
+                    <input type="submit" value="edit" class="edit" />
+                </div>
+                <section></section>
+
+                <span class="clear_items ">Clear items</span>
+            </div>
+        </main>
+    </body>
+    <script src="script.js"></script>
 </html>
